networking/cilium/4-np-egress-allow-all.yml
# An empty Endpoint Selector will select all endpoints, thus writing a rule that will
# allow all egress traffic from an endpoint may be done as follows:

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-from-frontend"
spec:
  endpointSelector:
    matchLabels:
      role: frontend
  egress:
  - toEndpoints:
    - {}
